closed #57 게임룸의 진행상황을 플레이어에게 알려줘야 한다. * 게임 종료시 현재 게임의 플레이어 순위 표시 기능 추가 closed #73 플레이어의 랭킹을 계산해야 한다